refactor: update section headers for query expansion and context filtering in Part-3 notebook

--- a/Part-3-Retrieval-Strategies.ipynb
+++ b/Part-3-Retrieval-Strategies.ipynb
@@ -429,7 +429,7 @@
    "id": "35dcd1a1",
    "metadata": {},
    "source": [
-    "### 1.3 Query Expansion: Improving Retrieval with Better Queries\n",
+    "### 2. Query Expansion: Improving Retrieval with Better Queries\n",
     "\n",
     "**Problem:** Users often ask queries in ways that don't match document terminology.\n",
     "\n",
@@ -440,7 +440,7 @@
     "\n",
     "**Solution:** Use an LLM to expand or rewrite queries for better matching.\n",
     "\n",
-    "### LLM-Based Query Expansion\n",
+    "#### LLM-Based Query Expansion\n",
     "\n",
     "1. **Intelligent Synonyms**: LLMs understand context and generate appropriate synonyms\n",
     "   - \"fast internet\" → \"high-speed connection, broadband, bandwidth requirements\"\n",
@@ -551,7 +551,7 @@
    "id": "ffdf6067",
    "metadata": {},
    "source": [
-    "## 2. Re-ranking: Post-filtering for Better Relevance\n",
+    "## 3. Re-ranking: Post-filtering for Better Relevance\n",
     "\n",
     "Re-ranking refines initial retrieval results using more sophisticated models.\n",
     "\n",
@@ -690,7 +690,7 @@
    "id": "63b7e482",
    "metadata": {},
    "source": [
-    "## 3. Context Filtering: Deciding Relevance to Query Intent\n",
+    "## 4. Context Filtering: Deciding Relevance to Query Intent\n",
     "\n",
     "Context filtering ensures that retrieved chunks are actually relevant to the user's intent and the needs of the downstream application. This step is crucial for improving the quality of answers and reducing irrelevant or distracting information.\n",
     "\n",
@@ -700,24 +700,31 @@
     "  - Only include chunks whose similarity or relevance score (from hybrid or cross-encoder reranker) is above a certain threshold.\n",
     "  - Lower thresholds include more context (risking noise), higher thresholds are stricter (risking missing useful info).\n",
     "\n",
-    "- **Metadata Filtering:**\n",
-    "  - Use metadata fields (e.g., document type, user role, department, date) to include or exclude chunks.\n",
-    "  - Example: Only show policy documents to HR users, or filter by recent date for time-sensitive queries.\n",
-    "\n",
     "- **Top-N Filtering:**\n",
     "  - Return only the top N most relevant chunks, regardless of their absolute score.\n",
     "  - Useful for limiting context size for LLMs or downstream models.\n",
     "\n",
+    "- **Metadata Filtering:**\n",
+    "  - Use metadata fields (e.g., document type, user role, department, date) to include or exclude chunks.\n",
+    "  - Example: Only show policy documents to HR users, or filter by recent date for time-sensitive queries.\n",
+    "\n",
     "- **Intent Detection and Filtering:**\n",
     "  - Classify the user's query to understand what kind of information they are seeking (e.g., 'policy', 'requirements', 'troubleshooting').\n",
     "  - Filter or boost chunks that match the detected intent, either by keyword, metadata, or LLM-based classification.\n",
-    "  - Approaches include:\n",
-    "    - Simple keyword/rule-based mapping (e.g., if query contains 'policy', intent is 'policy').\n",
-    "    - Heuristic patterns (e.g., 'how to', 'steps for' → procedural intent).\n",
-    "    - Machine learning classifiers trained on labeled queries.\n",
-    "    - LLM-based intent detection using prompt engineering.\n",
+    "  - Suppose a user query is:\n",
+    "  Example:\n",
+    "      > \"What are the troubleshooting steps for slow internet?\"\n",
     "\n",
-    "- **Temporal Filtering:**\n",
+    "    **Step 1: Detect Intent**\n",
+    "    - Use simple keyword matching or rules:\n",
+    "      - If the query contains words like \"troubleshooting\", \"fix\", \"resolve\", classify intent as `troubleshooting`.\n",
+    "      - If the query contains \"requirements\", intent is `requirements`.\n",
+    "      - If the query contains \"policy\", intent is `policy`.\n",
+    "    \n",
+    "    After retrieval, only include or boost chunks that mention the intent keyword (e.g., \"troubleshooting\") or are tagged as such in metadata.\n",
+    "    Such filtering can be done using LLMs.\n",
+    "\n",
+    "- **Timeline Filtering:**\n",
     "  - Filter or prioritize chunks based on recency or time relevance (e.g., only include documents from the last year).\n"
    ]
   }
