refactor: enhance output formatting for semantic chunk creation and improve query expansion prompt clarity

--- a/Part-3-Retrieval-Strategies.ipynb
+++ b/Part-3-Retrieval-Strategies.ipynb
@@ -27,10 +27,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb560bdf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Created 10 semantic chunks\n",
+      "\n",
+      "Chunk 1 (352 chars): \n",
+      "Remote Work Policy\n",
+      "\n",
+      "TOPIC: Introduction and Benefits\n",
+      "This remote work policy establishes guidelines...\n",
+      "\n",
+      "Chunk 2 (558 chars): \n",
+      "Remote Work Policy\n",
+      "\n",
+      "TOPIC: Introduction and Benefits\n",
+      "This remote work policy establishes guidelines...\n",
+      "\n",
+      "Chunk 3 (476 chars): These advantages \n",
+      "have become increasingly important in today's dynamic work environment. TOPIC: Eli...\n",
+      "\n",
+      "Chunk 4 (495 chars): Eligible employees must \n",
+      "demonstrate strong performance in their current role, possess excellent com...\n",
+      "\n",
+      "Chunk 5 (436 chars): Performance reviews will be considered when evaluating eligibility. TOPIC: Technology Infrastructure...\n",
+      "\n",
+      "Chunk 6 (460 chars): Employees are responsible for maintaining secure home networks and using company-approved \n",
+      "VPN softw...\n",
+      "\n",
+      "Chunk 7 (404 chars): The IT department provides technical support for connectivity issues. TOPIC: Communication and Colla...\n",
+      "\n",
+      "Chunk 8 (404 chars): Daily check-ins with supervisors are required, and attendance at weekly team \n",
+      "meetings is mandatory....\n",
+      "\n",
+      "Chunk 9 (465 chars): Employees should be responsive \n",
+      "during core business hours and use appropriate channels for urgent m...\n",
+      "\n",
+      "Chunk 10 (308 chars): Employees must meet all established deadlines and maintain the same quality standards as office-base...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Import sample data and required libraries\n",
     "from sample_data import SAMPLE_TEXT\n",
@@ -345,10 +387,10 @@
     "    # Tokenize all chunks into words for BM25 processing\n",
     "    tokenized_chunks = [chunk.lower().split() for chunk in chunks]\n",
     "    \n",
+    "    query_tokens = query.lower().split()\n",
     "    # Initialize BM25 algorithm with tokenized chunks\n",
     "    # BM25 uses term frequency and inverse document frequency for scoring\n",
     "    bm25 = BM25Okapi(tokenized_chunks)\n",
-    "    query_tokens = query.lower().split()\n",
     "    \n",
     "    # Get BM25 scores for the top_k chunks identified by vector search\n",
     "    # This ensures we only score chunks that are already semantically relevant\n",
@@ -426,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35dcd1a1",
+   "id": "5aeee18b",
    "metadata": {},
    "source": [
     "### 2. Query Expansion: Improving Retrieval with Better Queries\n",
@@ -461,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2480a0d",
+   "id": "72137a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +514,13 @@
     "print(\"✅ LLM client initialized successfully!\\n\")\n",
     "\n",
     "def llm_query_expansion(query: str, num_variations: int = 3):\n",
-    "    prompt = f\"\"\"You are a search query optimizer. Given a user's search query, generate {num_variations} improved variations that will help find relevant documents.\\n\\nEach variation should:\\n- Use different words/synonyms but preserve the same search intent\\n- Expand abbreviations (e.g., 'WFH' → 'work from home')\\n- Add relevant terms that might appear in documents\\n- Use both casual and formal terminology where appropriate\\n\\nOriginal query: {query}\\n\\nReturn ONLY {num_variations} optimized query variations, one per line, numbered 1-{num_variations}:\"\"\"\n",
+    "    prompt = f\"\"\"You are a search query optimizer. Given a user's search query, generate {num_variations} \n",
+    "    improved variations that will help find relevant documents.\\n\\nEach variation should:\\n- \n",
+    "    Use different words/synonyms but preserve the same search intent\\n-\n",
+    "    Expand abbreviations (e.g., 'WFH' → 'work from home')\\n- \n",
+    "    Add relevant terms that might appear in documents\\n- \n",
+    "    Use both casual and formal terminology where appropriate\\n\\nOriginal query: {query}\\n\\n\n",
+    "    Return ONLY {num_variations} optimized query variations, one per line, numbered 1-{num_variations}:\"\"\"\n",
     "    response = groq_client.chat.completions.create(\n",
     "        model=\"llama-3.1-8b-instant\",\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
